# l_software_practice

./: .env.example  .gitignore  README.md  pyproject.toml  软件产品综合开发实践.docx
docs/: prompts.md
report/: experiment-report.md
src/ai_news/: __init__.py  agent.py  cli.py  config.py  conversation_cache.py  deepseek_client.py  mcp_server.py  models.py  tools.py
tests/: test_agent.py  test_cli.py  test_conversation_cache.py  test_deepseek_client.py  test_tools.py
