[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "daily-ai-news-agent"
version = "0.1.0"
description = "A CLI MCP-based agent that collects AI news and answers conversationally with DeepSeek tool calls."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Daily AI News Agent" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "mcp>=1.28.0",
  "openai>=1.90.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-dateutil>=2.9.0",
  "rich>=13.7.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
ai-news = "ai_news.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
